# meta-cloud-ops-gym

./: Dockerfile  README.md  inference.py  openenv.json  openenv.yaml  package.sh  pyproject.toml  requirements.txt  server.py  validate-local.sh
env/: cloudops_env.py  server.py
server/: app.py
