[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudops-env"
version = "0.1.0"
description = "OpenEnv-compatible CloudOps environment for Hugging Face Spaces deployment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.1",
  "requests==2.31.0",
  "openai==1.35.0",
  "pydantic==2.8.2",
  "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
py-modules = ["inference"]

[tool.setuptools.packages.find]
include = ["env*", "server*"]
